added close html tag

--- a/unit _1/index.html
+++ b/unit _1/index.html
@@ -2,7 +2,9 @@
 <html>
 <head> <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>NBA</title>
+</head>
 <body>
 	<h1>New York Knicks</h1>
-	<p>News and scores</p>
+	<p>Lose again</p>
 </body>
+</html>
