--- a/unit _1/index.html
+++ b/unit _1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" type="text/css" href="css/style.css">
+<head> <link rel="stylesheet" type="text/css" href="CSS/style.css">
 <title>NBA</title>
 </head>
 <body>
